--- a/composer.json
+++ b/composer.json
@@ -6,20 +6,21 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.10",
-        "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8",
-        "nativephp/electron": "^0.3.3"
+        "guzzlehttp/guzzle": "^7.8.0",
+        "laravel/framework": "^v10.21.0",
+        "laravel/sanctum": "^v3.2.6",
+        "laravel/tinker": "^v2.8.2",
+        "livewire/livewire": "^v3.0.1",
+        "nativephp/electron": "^0.4.0"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^7.0",
-        "phpunit/phpunit": "^10.1",
-        "spatie/laravel-ignition": "^2.0"
+        "fakerphp/faker": "^v1.23.0",
+        "laravel/pint": "^v1.11.0",
+        "laravel/sail": "^v1.24.0",
+        "mockery/mockery": "^1.6.6",
+        "nunomaduro/collision": "^v7.8.1",
+        "phpunit/phpunit": "^10.3.2",
+        "spatie/laravel-ignition": "^2.3.0"
     },
     "autoload": {
         "psr-4": {
